fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ html {
   scroll-behavior: smooth; 
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 .wrapper {
   max-width: 1222px;
   margin: 0 auto;
